<!--
  ~ Copyright (c) 2024. Koushik R <rkoushik.14@gmail.com>.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.grookage.leia</groupId>
    <artifactId>leia</artifactId>
    <version>1.1.2-SNAPSHOT</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>com.phonepe</groupId>
        <artifactId>pp-parent-pom</artifactId>
        <version>0.132</version>
        <relativePath />
    </parent>

    <name>Leia</name>
    <description>Schema Registry</description>
    <inceptionYear>2024</inceptionYear>

    <modules>
        <module>leia-bom</module>
        <module>leia-parent</module>
        <module>leia-core</module>
        <module>leia-models</module>
        <module>leia-common</module>
        <module>leia-dropwizard</module>
        <module>leia-repository</module>
        <module>leia-elastic</module>
        <module>leia-dropwizard-es</module>
        <module>leia-schema-validator</module>
        <module>leia-client</module>
        <module>leia-client-dropwizard</module>
        <module>leia-processor</module>
        <module>leia-aerospike</module>
        <module>leia-aerospike-dw</module>
        <module>leia-http-processor</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <java.release.version>17</java.release.version>
        <maven.compiler.version>3.8.1</maven.compiler.version>
        <maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>
        <jacoco.version>0.8.8</jacoco.version>
        <maven.source.plugin.version>3.2.1</maven.source.plugin.version>
        <maven.javadoc.plugin.version>3.6.3</maven.javadoc.plugin.version>
        <sonar.coverage.exclusions>**/http/processor/**</sonar.coverage.exclusions>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                    <release>${java.release.version}</release>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
                <dependencies>
                    <dependency>
                        <artifactId>asm</artifactId>
                        <groupId>org.ow2.asm</groupId>
                        <version>7.2</version>
                    </dependency>
                </dependencies>
                <groupId>org.apache.maven.plugins</groupId>
                <version>${maven.compiler.version}</version>
            </plugin>

            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <id>test</id>
                        <phase>test</phase>
                    </execution>
                </executions>
                <version>${maven.surefire.plugin.version}</version>
            </plugin>

            <plugin>
                <artifactId>findbugs-maven-plugin</artifactId>
                <groupId>org.codehaus.mojo</groupId>
                <version>3.0.3</version>
            </plugin>

            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <id>attach-sources</id>
                    </execution>
                </executions>
                <groupId>org.apache.maven.plugins</groupId>
                <version>${maven.source.plugin.version}</version>
            </plugin>

            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <id>attach-javadocs</id>
                    </execution>
                </executions>
                <groupId>org.apache.maven.plugins</groupId>
                <version>${maven.javadoc.plugin.version}</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>add-java-open-options-for-jdk16+</id>
            <activation>
                <jdk>[16,)</jdk>
            </activation>
            <properties>
                <argLine>
                    --add-opens java.base/java.net=ALL-UNNAMED
                    --add-opens java.base/sun.net=ALL-UNNAMED
                </argLine>
            </properties>
        </profile>
    </profiles>
</project>
